# ubpf-rs

./: Cargo.toml  LICENSE.txt  README.md
assembler/: Cargo.toml
assembler/src/: asm_parser.rs  assemble.rs  consts.rs  disassemble.rs  ebpf.rs  error.rs  instruction.rs  lib.rs  utils.rs
assembler/src/assemble/: asm.rs  asm_parser.rs  elf.rs  mod.rs
assembler/src/jit/: mod.rs  translate.rs  translator.rs  utils.rs
data/: add.data  div32_imm.data  div32_reg.data  div64_reg.data  div64_reg.res  jeq_reg.data  jgt_reg.data  jsgt_reg.data  jsle_imm.data  jslt_reg.data  ldxh.data  ldxh.res  ldxw.data  mul32_imm.data  sth.data  stw.data  stxw.data
ubpf/: Cargo.toml
ubpf-rs/: Cargo.toml
ubpf/data/: div64_imm.data  div_zero.data  ja.data  jeq_imm.data  jge_imm.data  jgt_imm.data  jgt_reg.data  jle_imm.data  jset_reg.data  jsge_imm.data  jsge_reg.data  jsgt_imm.data  jsle_reg.data  jslt_imm.data  lddw.data  lddw.res  ldxb.data  ldxdw.data  mul32_overflow.data  mul32_reg.data  mul64_reg.data  stb.data  stdw.data  stdw.res  stxb.data  stxdw.data  stxdw.res  stxh.data  stxw.res
ubpf/src/: error.rs  main.rs  runtime.rs  utils.rs
