[package]
name = "ubpf-rs"
version = "0.1.0"
edition = "2021"
authors = ["2250015961@qq.com"]
description = "A ebpf virtual machine written in rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "assembler",
    "ubpf",
]

[[bin]]
name = "assembler"
path ="assembler/src/main.rs"

[[ubpf]]
name = "ubpf"
path ="ubpf/src/main.rs"

[dependencies]
lazy_static = "1.4.0"