[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
goblin = "0.4"
thiserror = "1.0.30"
nom = "7"
bytes = "1"
libc = "0.2.*"

[dependencies.iced-x86]
version = "1.15.0"
default-features = false
# See below for all features
features = ["std", "decoder", "masm"]
